@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2009,v 1.652 2009/02/20 19:49:47 wiz Exp $
+$NetBSD: CHANGES-2009,v 1.653 2009/02/20 20:02:30 reed Exp $
 
 Changes to the packages collection and infrastructure in 2009:
 
@@ -881,3 +881,4 @@ Changes to the packages collection and infrastructure in 2009:
 	Updated wm/pekwm to 0.1.10 [obache 2009-02-20]
 	Updated lang/ruby18-base to 1.8.7.72nb3 [taca 2009-02-20]
 	Updated graphics/digikam-doc to 0.9.5 [wiz 2009-02-20]
+	Updated textproc/libcroco to 0.6.2 [reed 2009-02-20]
